--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "screeps",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "eslint": "eslint .",
-    "eslint-fix": "eslint . --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dewetblomerus/screeps.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dewetblomerus/screeps/issues"
-  },
-  "homepage": "https://github.com/dewetblomerus/screeps#readme",
-  "devDependencies": {
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-screeps": "^1.4.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.10"
-  }
+    "name": "screeps",
+    "version": "1.0.0",
+    "description": "",
+    "scripts": {
+        "link": "mkdir -p dist; ln -s $(pwd)/dist/ ~/Library/Application\\ Support/Screeps/scripts/127_0_0_1___21025/default",
+        "build": "rollup -c",
+        "watch": "rollup -cw"
+    },
+    "devDependencies": {
+        "@types/lodash": "^4.14.136",
+        "@types/node": "^12.6.8",
+        "@types/screeps": "^2.4.0",
+        "prettier": "^1.14.0",
+        "typescript": "2.7.2"
+    },
+    "dependencies": {
+        "lodash": "^4.17.15",
+        "rollup": "^1.18.0",
+        "rollup-plugin-clear": "^2.0.7",
+        "rollup-plugin-commonjs": "^10.0.2",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-typescript2": "^0.22.1"
+    }
 }
