--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "baseUrl": "src/",
-    "strict": false,
+    "strict": true,
     "experimentalDecorators": true,
     "noImplicitReturns": true,
     "allowUnreachableCode": false,
